# CatNet-Bot

./: README.md  pyproject.toml
catnetbot/: bot.py  config_template.toml  errors.py  main.py  models.py  toml_config.py
catnetbot/cogs/: audition.py  moderation.py
